[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ShiftingBloomFilter"
version = "1.0"
authors = [
  { name="hero24", email="hero24@interia.pl" },
]
description = "Implemenation of shifting bloom filter in python 3"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hero24/ShiftingBloomFilter"
Issues = "https://github.com/hero24/ShiftingBloomFilter/issues/"


